# django-template

./: .env.example  .flake8  DevDockerfile  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.postgres/: postgres-init.sh
django_template/: exceptions.py  managers.py  settings.py  urls.py
django_template/models/: __init__.py  models.py  non_database_models.py
