[tool.poetry]
name = "django-template"
version = "0.1.0"
description = "Service template in Django"
authors = ["Mauricio Pisabarro <mauripisabarro@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.5"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.2.2"
django-environ = "^0.9.0"
psycopg2 = "^2.9.5"
pydantic = "^1.10.4"
django-extensions = "^3.2.1"
django-cors-headers = "^3.13.0"
python-dotenv = "^0.21.0"

[tool.poetry.dev-dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
